<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#DDABB4E4"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_change"
        android:layout_width="411dp"
        android:layout_height="286dp"
        android:padding="50dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adi1"
        android:contentDescription="@string/secon_activite_img" />

    <Button
        android:id="@+id/button26"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="#00FFFFFF"
        android:drawableStart="@drawable/fav_icon"
        android:padding="3dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button27"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:drawableStart="@drawable/arrow_back"
        android:gravity="center_horizontal"
        android:padding="3dp"
        app:layout_constraintEnd_toStartOf="@+id/button26"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_margin="25dp"
            android:text="@string/adidas"
            android:textColor="#000109"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="337dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"
            android:gravity="start|center"
            android:background="@drawable/card_bg"
            android:drawableEnd="@drawable/cart_icon"
            android:paddingEnd="35dp"
            android:text="@string/_280"
            android:textSize="25sp"
            android:paddingStart="30dp"
            android:textColor="@color/white"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button21"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal|start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/btn_bg"
            android:text="@string/us_6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal|start"
            android:layout_marginStart="85dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/btn_bg"
            android:text="@string/us_6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="220dp"
            android:background="@drawable/btn_bg"
            android:text="@string/us_6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button24"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal|start"
            android:layout_marginStart="216dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/btn_bg"
            android:text="@string/us_6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button25"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_bg"
            android:text="@string/us_6"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:layout_gravity="center_horizontal|start"
            android:layout_marginTop="170dp"
            android:layout_marginStart="20sp"
            android:textColor="#A1000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="85dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/nmd_r1" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>